# simulation_fim

./: .travis.yml  README.md  azure-pipelines.yml
simulation_lib/: .travis.yml  CMakeLists.txt  README.md
simulation_lib/cmake/Modules/: FindCLAPACK.cmake
simulation_lib/include/: CMakeLists.txt  link.h  network.h  node.h
simulation_lib/src/: CMakeLists.txt  export.def  link.cpp  network.cpp  node.cpp
simulation_lib/test/: CMakeLists.txt  link_test.cpp  network_test.cpp  node_test.cpp  test.h
simulation_user/: .gitignore  CMakeLists.txt  README.md  linear_network_simulation.cpp  post_processing.bat
simulation_user/cmake/Modules/: FindFIM.cmake
